# Kost

./: .gitignore  CMakeLists.txt
src/: Database.cpp  Database.h  MainWindow.cpp  MainWindow.h  main.cpp
ui/: MainWindow.ui
